; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_devctl.c_btm_db_reset.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_devctl.c_btm_db_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 (i8*)*, i32 (i8*)* }

@BTM_DEV_RESET = common dso_local global i32 0, align 4
@btm_cb = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @btm_db_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @btm_db_reset() #0 {
  %1 = alloca i32 (i8*)**, align 8
  %2 = alloca i32, align 4
  %3 = load i32, i32* @BTM_DEV_RESET, align 4
  store i32 %3, i32* %2, align 4
  %4 = call i32 (...) @btm_inq_db_reset()
  %5 = load i32 (i8*)*, i32 (i8*)** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @btm_cb, i32 0, i32 0, i32 1), align 8
  %6 = icmp ne i32 (i8*)* %5, null
  br i1 %6, label %7, label %17

7:                                                ; preds = %0
  %8 = load i32 (i8*)*, i32 (i8*)** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @btm_cb, i32 0, i32 0, i32 1), align 8
  %9 = bitcast i32 (i8*)* %8 to i32 (i8*)**
  store i32 (i8*)** %9, i32 (i8*)*** %1, align 8
  store i32 (i8*)* null, i32 (i8*)** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @btm_cb, i32 0, i32 0, i32 1), align 8
  %10 = load i32 (i8*)**, i32 (i8*)*** %1, align 8
  %11 = icmp ne i32 (i8*)** %10, null
  br i1 %11, label %12, label %16

12:                                               ; preds = %7
  %13 = load i32 (i8*)**, i32 (i8*)*** %1, align 8
  %14 = load i32 (i8*)*, i32 (i8*)** %13, align 8
  %15 = call i32 %14(i8* null)
  br label %16

16:                                               ; preds = %12, %7
  br label %17

17:                                               ; preds = %16, %0
  %18 = load i32 (i8*)*, i32 (i8*)** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @btm_cb, i32 0, i32 0, i32 0), align 8
  %19 = icmp ne i32 (i8*)* %18, null
  br i1 %19, label %20, label %31

20:                                               ; preds = %17
  %21 = load i32 (i8*)*, i32 (i8*)** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @btm_cb, i32 0, i32 0, i32 0), align 8
  %22 = bitcast i32 (i8*)* %21 to i32 (i8*)**
  store i32 (i8*)** %22, i32 (i8*)*** %1, align 8
  store i32 (i8*)* null, i32 (i8*)** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @btm_cb, i32 0, i32 0, i32 0), align 8
  %23 = load i32 (i8*)**, i32 (i8*)*** %1, align 8
  %24 = icmp ne i32 (i8*)** %23, null
  br i1 %24, label %25, label %30

25:                                               ; preds = %20
  %26 = load i32 (i8*)**, i32 (i8*)*** %1, align 8
  %27 = load i32 (i8*)*, i32 (i8*)** %26, align 8
  %28 = bitcast i32* %2 to i8*
  %29 = call i32 %27(i8* %28)
  br label %30

30:                                               ; preds = %25, %20
  br label %31

31:                                               ; preds = %30, %17
  ret void
}

declare dso_local i32 @btm_inq_db_reset(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
